--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,7 @@ services:
       - customnetwork
     depends_on:
       - jaeger
+      - postgres
     ports: 
       - 1212:8080
       - 1213:8081
