--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -32,5 +32,6 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version-file: 'go.mod'
-      - run: go mod tidy 
+      - run: go mod tidy
+      - run: make config
       - run: go test test/main_suite_test.go
