--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -34,4 +34,4 @@ jobs:
           go-version-file: 'go.mod'
       - run: go mod tidy
       - run: make config
-      - run: go test test/main_suite_test.go
+      - run: go test ./test/...
