--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 jobs:
-  run-intergraion-tests:
+  intergraion-tests:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -34,4 +34,6 @@ jobs:
           go-version-file: 'go.mod'
       - run: go mod tidy
       - run: make config
+      - run: go install github.com/swaggo/swag/cmd/swag@latest
+      - run: swag init
       - run: go test ./test/...
