--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Build executable
       - uses: actions/checkout@v1
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: "go.mod"
+      - run: go mod download
+      - run: go mod vendor
 
       - name: Copy repository contents via scp
         uses: appleboy/scp-action@master
