--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,8 +39,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd maskan
-            docker compose down
-            docker compose build
+            docker compose down maskan
+            docker compose build maskan
             docker compose up -d jaeger
             docker compose up -d postgres
             docker compose up -d maskan
