--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -62,7 +62,7 @@ services:
     volumes: 
       - psql-micro:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: 4v7$AaeM7DJ%9G8w
+      POSTGRES_PASSWORD: e35YtGPSz6agLyJH
       POSTGRES_USER: samrd
       POSTGRES_DB: maskan
     ports:
