--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -16,8 +16,8 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: password
-          POSTGRES_USER: admin
+          POSTGRES_PASSWORD: e35YtGPSz6agLyJH
+          POSTGRES_USER: samrd
           POSTGRES_DB: maskan
         options: >-
           --health-cmd pg_isready
