--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -63,7 +63,7 @@ services:
       - psql-micro:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: e35YtGPSz6agLyJH
-      POSTGRES_USER: samrd
+      POSTGRES_USER: nftadmin
       POSTGRES_DB: maskan
     ports:
       - "5432:5432"
