--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,7 +1,7 @@
 env: "development"
 
 app:
-  name: "maskan"
+  name: "nft"
   baseURL: "/v1"
   http:
     host: "localhost"
@@ -31,7 +31,7 @@ postgres:
   password: "e35YtGPSz6agLyJH"
   host: "postgres:5432"
   port: "5432"
-  schema: "maskan"
+  schema: "nft"
 
 Nats:
   username: ""
