--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # -----------------------------
   # base fiber service
   # -----------------------------
-  maskan:
+  nft:
     build: 
       context: .
       dockerfile: Dockerfile
@@ -80,11 +80,11 @@ services:
     image: postgres:latest
     restart: unless-stopped
     volumes: 
-      - psql-micro:/var/lib/postgresql/data
+      - psql-nft:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: e35YtGPSz6agLyJH
       POSTGRES_USER: nftadmin
-      POSTGRES_DB: maskan
+      POSTGRES_DB: nft
     ports:
       - "5432:5432"
     networks: 
@@ -113,11 +113,10 @@ services:
 # -----------------------------
 networks:
   customnetwork:
+    external: true
 # -----------------------------
 # volumes
 # -----------------------------
 volumes: 
-  psql-micro:
-    driver: local
-  pgadmin:
+  psql-nft:
     driver: local
