feat: implement kyc

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,6 +6,7 @@ WORKDIR /go/src/application
 
 ADD . .
 
+RUN mkdir -p /temp
 # RUN go get ./... && go mod vendor && go mod verify
 
 RUN curl -sSfL https://raw.githubusercontent.com/cosmtrek/air/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
