--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -33,7 +33,7 @@ jobs:
           go-version-file: "go.mod"
       - run: go mod tidy
       - run: make config
-      - run: mkdir temp
+      - run: mkdir ./test/temp
       - run: go install github.com/swaggo/swag/cmd/swag@latest
       - run: swag init
       - run: go test ./test/...
