--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: e35YtGPSz6agLyJH
           POSTGRES_USER: nftadmin
-          POSTGRES_DB: nft
+          POSTGRES_DB: nftasset
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
