--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,11 +80,11 @@ services:
     image: postgres:latest
     restart: unless-stopped
     volumes: 
-      - psql-nft:/var/lib/postgresql/data
+      - psql-nftasset:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: e35YtGPSz6agLyJH
       POSTGRES_USER: nftadmin
-      POSTGRES_DB: nft
+      POSTGRES_DB: nftasset
     ports:
       - "5432:5432"
     networks: 
