--- a/test/config.example.yaml
+++ b/test/config.example.yaml
@@ -1,7 +1,7 @@
 env: "test"
 
 app:
-  name: "nft"
+  name: "nftasset"
   baseURL: "/v1"
   http:
     host: "localhost"
@@ -31,7 +31,7 @@ postgres:
   password: "e35YtGPSz6agLyJH"
   host: "localhost:5432"
   port: "5432"
-  schema: "nft"
+  schema: "nftasset"
 
 
 storage:
@@ -42,7 +42,7 @@ storage:
   urlExpInMin: 60
   buckets:
     kyc: "kyc"
-    nft: "nft"
+    nft: "nftasset"
 
 file:
   tempDir: "temp"
