--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,11 +60,11 @@ services:
     image: postgres:latest
     restart: unless-stopped
     volumes:
-      - psql-nftasset:/var/lib/postgresql/data
+      - psql-nft:/var/lib/postgresql/data
     environment:
       POSTGRES_PASSWORD: e35YtGPSz6agLyJH
       POSTGRES_USER: nftadmin
-      POSTGRES_DB: nftasset
+      POSTGRES_DB: nft
     ports:
       - "5432:5432"
     networks:
