feat: implement collection

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,9 +7,9 @@ services:
   nft:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
-      - .:/go/src/application
+      - .:/build
     networks:
       - customnetwork
     depends_on:
