--- a/.github/workflows/intergration-test.yml
+++ b/.github/workflows/intergration-test.yml
@@ -35,5 +35,6 @@ jobs:
       - run: make config
       - run: mkdir ./test/temp
       - run: go install github.com/swaggo/swag/cmd/swag@latest
+      - run: swag fmt
       - run: swag init
       - run: go test ./test/...
