feat: add talan module

--- a/test/config.example.yaml
+++ b/test/config.example.yaml
@@ -72,3 +72,10 @@ otp:
 logstash:
   endpoint: "logstash:5000"
   timeout: 5 # second
+
+talan:
+  baseUrl: "https://centralized.walletapi.org/talan/v1/"
+  address: "/address"
+  generate: "/generate"
+  transactions: "/txs"
+  balance: "/balance"
